# hootcurses

./: CMakeLists.txt
.cache/clangd/index/: hootcurses.c.9DCEDDA5F68422F1.idx  hootcurses.h.CD90416231E0E581.idx  linked_list.c.CECEB21064151569.idx  linked_list.h.548C9F24C65809C3.idx  main.c.69B0C91B7962F54D.idx  queue.c.AAD6A663565D46A3.idx  queue.h.BB03DAB7FB384F9A.idx  resizable_array.c.943A2E665BFCE1B3.idx  resizable_array.h.3C3436C3F1F80F12.idx  screen_surface.c.6AFB6F0CF8C23FAD.idx  screen_surface.h.D8EE16D97A3B8F60.idx  types.h.545A77AEA2E82FC0.idx
libs/linked_list/: CMakeLists.txt
libs/resizable_array/: CMakeLists.txt
src/: hootcurses.c  hootcurses.h  main.c  queue.h  types.h
